Refactoring with APIs available in Java 17